Fixed Inventory spacing between main elements

--- a/src/styles/actor/character/_inventory.scss
+++ b/src/styles/actor/character/_inventory.scss
@@ -269,7 +269,7 @@
 
     .inventory-list {
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-start;
         position: relative;
         overflow-y: scroll;
         height: calc(100% - 42px);
